# vllm-spyre

./: .gitignore  RELEASING.md  mkdocs.yaml  pyproject.toml
.github/workflows/: add_label_automerge.yml  model_smoke.yml  reminder_comment.yml  test.yml
docs/: .nav.yml  requirements-docs.txt
docs/contributing/: scheduler.md
docs/mkdocs/data/: generate_example.py  prefill_single_chunks.json  prefill_three_chunks.json  prefix_caching_1.json  prefix_caching_2.json  prefix_caching_3.json  scheduling_admission_constraints.json  scheduling_padding_tkv_jump.json  timeline_admission_constraints.json
docs/mkdocs/hooks/: generate_prefill_only_plots.py  generate_prefix_caching_plots.py  generate_scheduling_plots.py  generate_timeline.py
docs/user_guide/: configuration.md  performance.md
sendnn_inference/: __init__.py  platform.py
sendnn_inference/model_executor/model_loader/: spyre.py
sendnn_inference/v1/core/: scheduler.py
sendnn_inference/v1/worker/: spyre_worker.py
tests/e2e/: test_granite41_dev_hack.py  test_model_smoke.py  test_profiler.py
tests/utils/: test_upstream_compatibility.py
tests/v1/worker/: test_scheduler_tkv_limits.py  test_spyre_worker_profile.py
vllm_spyre/model_executor/model_loader/: spyre.py
vllm_spyre/v1/core/: scheduler.py
vllm_spyre/v1/worker/: spyre_model_runner.py  spyre_worker.py
vllm_spyre_next/: pyproject.toml
vllm_spyre_next/examples/: torch_spyre_inference.py
vllm_spyre_next/tests/: test_attention_correctness_stripped.py  test_spyre_attn.py
vllm_spyre_next/vllm_spyre_next/: platform.py
vllm_spyre_next/vllm_spyre_next/custom_ops/: rms_norm.py
vllm_spyre_next/vllm_spyre_next/v1/attention/backends/: spyre_attn.py
vllm_spyre_next/vllm_spyre_next/v1/worker/: spyre_worker.py
