[build-system]
requires = [
  "setuptools>=82",
  "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-spyre-next"
description = "Next iteration of vllm-spyre on the torch-spyre stack"
readme = "README.md"
license = {text = "Apache 2"}
dependencies = [
    "torch-spyre",
    "vllm",

    # Listing as direct deps to ensure they're picked up from the correct index.
    # Versions intentionally left out because these are dependencies of dependencies.
    "torch",
    "torchvision",
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.entry-points."vllm.platform_plugins"]
spyre_next = "vllm_spyre_next:register"

[project.entry-points."vllm.general_plugins"]
spyre_next_ops = "vllm_spyre_next:register_ops"

[project.entry-points."pytest11"]
spyre_next_test = "vllm_spyre_next.testing.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["vllm_spyre_next*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools_scm]
# Version files are optional, this just marginally speeds up version inspection
# at runtime
version_file = "vllm_spyre_next/_version.py"
# Version strings are formatted as `{version}+{local}`, e.g. "0.1.dev1+gb1a7032"
# Local versioning is incompatible with pypi, so we disable it by default.
local_scheme = "no-local-version"
root = ".."
# Only match spyre-next-vX.Y.Z tags (with optional SemVer pre-release suffix), ignoring v* tags used by vllm-spyre.
# SemVer pre-release format: hyphen followed by dot-separated identifiers (alphanumeric + hyphens)
tag_regex = "^spyre-next-v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+(?:-[0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*)?)$"
git_describe_command = "git describe --dirty --tags --long --match 'spyre-next-v*'"


[tool.uv]
default-groups = ["dev", "upstream-tests"]
override-dependencies = [
    # No triton support yet, don't allow any dependencies to pull it in
    "triton; sys_platform == 'never'",
    "arctic-inference; sys_platform == 'never'",
    "perf-analyzer; sys_platform == 'never'",

    # Skip packages on s390x and ppc64le that are expected to be pre-installed
    "vllm ; platform_machine not in 's390x, ppc64le'",
    "ray; platform_machine not in 's390x, ppc64le'",
    # uv doesn't resolve numba->llvmlite constraint correctly...
    #   if numba is updated, this version will likely need to be too
    "llvmlite==0.44.0; platform_machine not in 's390x, ppc64le'",
    "pyarrow; platform_machine not in 's390x, ppc64le'",
    # This torch version must match the one below in `build-constraint-dependencies`
    "torch==2.10.0 ; platform_machine not in 's390x, ppc64le'",

    # torch-spyre declares a dependency on numpy>2.3, conflicting with numba needed by vLLM
    # The range here should match the numba dependency
    "numpy>=1.24,<2.3",

    # opencv-python-headless==4.13.0.90 has a packaging bug that incorrectly depends on libxcb.so.1,
    # causing import failure on headless Linux systems.
    "opencv-python-headless==4.12.0.88",

    # setuptools is specified as a runtime dep by vllm, make sure it's patched for CVEs
    "setuptools>=82",

    # requests is used by many dependencies, make sure it's patched for CVEs
    "requests>=2.32.4",

]
# This adds constraints to all dependent build environments, which will ensure everything is built
# with the same version of torch. This CANNOT conflict with a package's existing build dependencies
build-constraint-dependencies = ["torch==2.10.0"]
# This ensures that we build the cpu backend for vLLM
extra-build-variables = { vllm = { VLLM_TARGET_DEVICE = "cpu" } }


# vLLM and torch-spyre must be pulled from github to be built from source
# NB: torch-spyre can only be compiled where `sendnn` is available
[tool.uv.sources]
vllm = { git = "https://github.com/vllm-project/vllm", rev = "v0.19.0" }
torch-spyre = { git = "https://github.com/torch-spyre/torch-spyre", rev = "59dba3866431031b8d253dd26b662b9472599575" }
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

# vllm specifies "common" build dependencies in pyproject.toml, while specific requirements for
# cpu builds are specified here:
# See https://github.com/vllm-project/vllm/blob/v0.15.1/requirements/cpu-build.txt
# In the future, we may need to use this section to specify extra dependencies required to build
# vllm from source for the cpu backend.
# NB: This section CANNOT be used to override dependencies to a conflicting version. For example,
# you cannot add torch==2.9.1 if vllm's build dependencies already specify torch>=2.10.0
# [tool.uv.extra-build-dependencies]
# vllm = [
#     "ninja",
# ]

# The pytorch-cpu index here ensures we always pull the cpu version of torch everywhere
# The `explicit=true` setting means this index will only be used for packages that we explicitly set
# it for in `tool.uv.sources`. This is important to avoid requiring the use of 
# `--index-strategy unsafe-best-match`
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ty.rules]
possibly-missing-attribute = "ignore"

[tool.ty.src]
exclude = ["vllm_spyre_next/__init__.py"]

[tool.ruff]
# Use widescreen monitors 😎😎😎
line-length = 100

[tool.ruff.lint.per-file-ignores]
"vllm_spyre_next/version.py" = ["F401"]
"vllm_spyre_next/_version.py" = ["ALL"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
    # % formatters
    "UP031",
    # ternary operators
    "SIM108",


    # TODO: Fix all of these in code instead

    # Type unions
    "UP007",
    # Callable
    "UP035",
    # Zip
    "B905",
]

[tool.codespell]
ignore-words-list = "dout, te, indicies, subtile, ElementE"
skip = "*.svg,./tests/hf_cache.json"
#skip = "./tests/models/fixtures,./tests/prompts,./benchmarks/sonnet.txt,./tests/lora/data,./build"

[tool.isort]
use_parentheses = true
skip_gitignore = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::_pytest.warning_types.PytestUnknownMarkWarning"
]

# --8<-- [start:test-markers-definition]
markers = [
    "spyre: Tests that require a Spyre device",
    "upstream: Tests coming from upstream vLLM",
    "upstream_passing: Tests known to pass from upstream vLLM",
]
# --8<-- [end:test-markers-definition]

[tool.markdownlint]
#MD013.line_length = 100
MD013 = false # line-length
MD033 = false # inline-html
MD038 = false # no-space-in-code
MD041 = false # first-line-h1
MD046 = false # code-block-style
MD024.allow_different_nesting = true # no-duplicate-headers
MD007.indent = 4 # ul-indent
MD037 = false # no-space-in-emphasis (allow MkDocs Admonitions)

[tool.pymarkdown]
plugins.md013.enabled = false # line-length
plugins.md033.enabled = false # inline-html
plugins.md041.enabled = false # first-line-h1
plugins.md046.enabled = false # code-block-style
plugins.md024.allow_different_nesting = true # no-duplicate-headers
plugins.md007.enabled = true
plugins.md007.indent = 4

[dependency-groups]
dev = [
    "pytest",
    "pyyaml",
]
upstream-tests = [
    "albumentations>=1.4.6",
    "arctic-inference==0.1.1",
    "backoff>=2.2.1",
    "bitsandbytes==0.46.1",
    "blobfile>=3.2.0",
    "buildkite-test-collector==0.1.9",
    "datamodel-code-generator>=0.54.1",
    "decord==0.6.0",
    "einops>=0.8.2",
    "fastsafetensors>=0.2.2",
    "genai-perf>=0.0.8",
    "gpt-oss>=0.0.7 ; python_full_version >= '3.12'",
    "grpcio-tools==1.78.0",
    "httpx>=0.28.1",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "lm-eval[api]>=0.4.9.2",
    "matplotlib>=3.10.8",
    "mistral-common[audio,image]>=1.9.0",
    "mteb[bm25s]>=2,<3",
    "num2words>=0.5.14",
    "numba==0.61.2",
    "numpy>=2.2.6",
    "open-clip-torch==2.32.0",
    "opencv-python-headless>=4.13.0",
    "peft>=0.15.0",
    "perceptron>=0.2.1",
    "pqdm>=0.2.0",
    "pydantic>=2.12",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-forked>=1.6.0",
    "pytest-rerunfailures>=16.1",
    "pytest-shard>=0.1.2",
    "pytest-timeout>=2.3.1",
    "ray[cgraph,default]>=2.48.0",
    "runai-model-streamer[gcs,s3]==0.15.3",
    "schemathesis>=3.39.15",
    "sentence-transformers>=5.2.0",
    "soundfile>=0.13.1",
    "tblib>=3.2.2",
    "tensorizer==2.10.1",
    "terratorch",
    "timm>=1.0.17",
    "tokenizers==0.22.0",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "transformers==4.57.5",
    "transformers-stream-generator>=0.0.5",
    "tritonclient>=2.51.0",
    "vector-quantize-pytorch>=1.27.21",
    "vocos>=0.1.0",
]
